--- a/src/App.Web/Views/Shared/Navigation.cshtml
+++ b/src/App.Web/Views/Shared/Navigation.cshtml
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavigationCtrl">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -11,7 +11,8 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li ng-class="{active:current=='home'}"><a ui-sref="home">Home</a></li>
+        <li ng-class="{active:current=='chat'}"><a ui-sref="chat">Chat</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
