refactoring. added page service.

--- a/src/App.Web/Views/Shared/_Layout.cshtml
+++ b/src/App.Web/Views/Shared/_Layout.cshtml
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="App">
-<head>
+<head ng-controller="HeaderCtrl">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>@(ViewBag.Title ?? "ASP.NET vNext")</title>
+  <title>{{Page.title()}}</title>
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
   <link href="/content/style.css" rel="stylesheet" />
