--- a/src/App.Web/Views/Shared/_Layout.cshtml
+++ b/src/App.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{Page.title()}}</title>
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+  <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
   <link href="/content/style.css" rel="stylesheet" />
 
   <!--[if lt IE 9]>
@@ -20,12 +20,12 @@
     @RenderBody()
 
     @* vendor *@
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.0.2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.min.js"></script>
+    <script src="//ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.0.2.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
 
     @* site specific *@
-    <script src="signalr/hubs"></script>
+    <script src="/signalr/hubs"></script>
     <script src="/content/site.js"></script>
   </body>
 </html>
